# traceflux

./: .commitlintrc.json  .docs-quality-config.yaml  .gitignore  .gitlint  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALLATION_TEST.md  LICENSE  README.md  RELEASE_ANNOUNCEMENT.md  RELEASE_NOTES.md  SECURITY.md  TASKS.md  TESTING.md  TODO-CI-MIGRATION.md  pyproject.toml  todo.md
.githooks/: pre-commit
.github/: BRANCH-PROTECTION-ANALYSIS.md  BRANCH_PROTECTION.md  COMMIT-EXAMPLES.md  COMMIT_CONVENTION.md  GITHUB-BRANCH-PROTECTION-RESEARCH.md  INFRASTRUCTURE-DECISIONS.md  PHASE2-TEST-REPORT.md  PHASE8-STATUS.md  RELEASE_PROTOCOL.md  awesome-submissions.json  pull_request_template.md
.github/ISSUE_TEMPLATE/: decision.yml
.github/workflows/: cd.yml  ci.yml  docs-quality.yml  pr-check.yml  release.yml  test.yml  validate.yml
design/: 00-search-flowchart.md  README.md
docs/: ARCHITECTURE.md  AWESOME-PROMOTION-DESIGN.md  GETTING_STARTED.md  INSTALLATION.md  OPENCLAW-AWESOME-TASK.md  OUTPUT-FORMAT.md  PHILOSOPHY.md  PROJECT-STATUS.md  PROMOTION-ISOLATION-DESIGN-v2.md  PROMOTION-ISOLATION-DESIGN.md  PROMOTION-SECURITY-DESIGN.md  PROMOTION-STRATEGY-DESIGN.md  PYTHON-INFRASTRUCTURE-PLAN.md  QUICK_REF.md  README.md  RELEASE.md  TESTING-PHILOSOPHY.md  TESTING.md  USAGE.md  USE-CASES.md
docs/algorithms/: README.md  autocomplete-implementation.md  autocomplete.md  divergent-search-implementation.md  divergent-search.md  punctuation-context-tree-impl.md  punctuation-context-tree.md
docs/associations/: README.md  six-degrees-impl.md  six-degrees.md
docs/contributor/: GETTING_STARTED.md  PYTHON-ENV.md  RELEASE.md  TESTING-PHILOSOPHY.md
docs/core/: README.md  frequency-ranking-impl.md  frequency-ranking.md  mathematical-model.md  mathematical-proofs.md  ngram-analysis.md  ngram-implementations.md  text-segmentation.md
docs/design/: README.md  search-flowchart.md
docs/errors/: README.md  branch-protection-merge-rejection.md
docs/internal/: ARCHITECTURE.md  BRANCH_PROTECTION.md  DECISIONS.md  GITHUB-BRANCH-PROTECTION-RESEARCH.md  PHILOSOPHY.md
docs/theory/: README.md  multi-hop-noise.md  search-vs-judgment.md
docs/user/: INSTALLATION.md  OUTPUT-FORMAT.md  QUICK_REF.md  USAGE.md  USE-CASES.md
drafts/: README.md
examples/: README.md  analyze-diff.sh  code-explorer.sh  doc-navigator.sh  explore.sh  find-related.sh  pipe-search.sh
research/: IMPLEMENTATION-DESIGN-PART1.md  IMPLEMENTATION-DESIGN-PART2.md  IMPLEMENTATION-DESIGN.md  README.md
research/01-foundations/: 2026-03-06_advanced-algorithms-part2.md  2026-03-06_advanced-algorithms.md  2026-03-06_character-level-analysis-part2.md  2026-03-06_character-level-analysis-part3.md  2026-03-06_character-level-analysis.md  2026-03-06_cross-domain-inspiration-part2.md  2026-03-06_cross-domain-inspiration-part3.md  2026-03-06_cross-domain-inspiration.md  2026-03-06_divergent-associations-part2.md  2026-03-06_divergent-associations-part3.md  2026-03-06_divergent-associations.md  2026-03-06_frequency-lz-pagerank-part2.md  2026-03-06_frequency-lz-pagerank-part3.md  2026-03-06_frequency-lz-pagerank.md  2026-03-06_lzwpagerank-autocomplete-part2.md  2026-03-06_lzwpagerank-autocomplete-part3.md  2026-03-06_lzwpagerank-autocomplete.md  2026-03-06_mathematical-formalization-part2.md  2026-03-06_mathematical-formalization-part3.md  2026-03-06_mathematical-formalization-part4.md  2026-03-06_mathematical-formalization.md  2026-03-06_ngram-explained-part2.md  2026-03-06_ngram-explained.md  2026-03-06_punctuation-context-tree-part2-part2.md  2026-03-06_punctuation-context-tree-part2.md  2026-03-06_punctuation-context-tree-part3.md  2026-03-06_punctuation-context-tree.md  2026-03-06_punctuation-namespace-index-part2.md  2026-03-06_punctuation-namespace-index-part3.md  2026-03-06_punctuation-namespace-index.md  2026-03-06_punctuation-segmentation-part2.md  2026-03-06_punctuation-segmentation-part3.md  2026-03-06_punctuation-segmentation.md  2026-03-06_pure-math-foundation-part2.md  2026-03-06_pure-math-foundation-part3.md  2026-03-06_pure-math-foundation.md  2026-03-06_space-is-readable-part2.md  2026-03-06_space-is-readable.md
research/02-associations/: 2026-03-06_six-degrees-theory-algo.md  2026-03-06_six-degrees-theory-research.md  2026-03-06_six-degrees-theory.md
research/03-philosophy/: 2026-03-06_multi-hop-noise-part1.md  2026-03-06_multi-hop-noise-part2.md  2026-03-06_multi-hop-noise.md  2026-03-06_search-vs-judgment-part1.md  2026-03-06_search-vs-judgment-part2.md  2026-03-06_search-vs-judgment-part3.md  2026-03-06_search-vs-judgment.md
scripts/: RELEASE_NOTES_TEMPLATE.md  check-awesome-status.py  check-code-quality.py  check-docs-quality.py  check-headers.py  release.sh
src/traceflux/: __init__.py  __version__.py  associations.py  cli.py  graph.py  index.py  output.py  pagerank.py  patterns.py  scanner.py
src/traceflux/cli/: __init__.py  __main__.py  main.py
src/traceflux/cli/commands/: __init__.py  associations.py  index.py  patterns.py  search.py
src/traceflux/cli/helpers/: __init__.py
test_corpus/: README.md  python_code.py
tests/: test_associations_integration.py  test_associations_unit.py  test_cli.py  test_cli_component.py  test_explore_workflow_e2e.py  test_graph_unit.py  test_index_unit.py  test_pagerank_unit.py  test_patterns.py  test_patterns_unit.py  test_pipeline_integration.py  test_real_corpus_e2e.py  test_scanner.py  test_scanner_unit.py
workflow/: README.md  commit.workflow.list  decision-capture.workflow.list
