# pyproject.toml
[project]
name = "traceflux"
version = "1.0.0"
description = "Lightweight text search engine with noise filtering and associative search"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
  { name = "Tracer" }
  # Email omitted for privacy - use GitHub noreply for commits
]
keywords = [
  "search",
  "text-processing",
  "information-retrieval",
  "unix-philosophy"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Text Processing :: Indexing",
]

dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
]

[project.scripts]
traceflux = "traceflux.cli:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 100

[tool.flake8]
max-line-length = 100
# Ignore:
# - E501: line too long (handled by black)
# - W503: line break before binary operator (controversial)
# - F401: unused imports (harmless, often intentional for future use)
# - F841: unused variables (harmless, often for debugging)
ignore = ["E501", "W503", "F401", "F841"]
# Still check:
# - F821: undefined names (actual bugs)
# - E203: whitespace before ':' (style)

[tool.coverage.run]
source = ["traceflux"]
omit = ["*/tests/*", "*/__init__.py"]

# =============================================================================
# Release Automation (python-semantic-release)
# Minimal config for Phase 8
# =============================================================================

[tool.semantic_release]
# Version source
version_toml = ["pyproject.toml:project.version"]

# Commit parser (Conventional Commits)
commit_parser = "conventional"  # Updated from 'angular' (deprecated in v11)

# Changelog
changelog_file = "CHANGELOG.md"
changelog_sections = ["feature", "fix", "breaking", "deprecation", "documentation", "performance", "refactor"]

# Publish settings (manual confirmation for now)
upload_to_release = false  # Manual: run `semantic-release publish` after review
upload_to_pypi = false     # Not using PyPI yet

# Branch configuration
branch = "main"
tag_format = "v{version}"

# Logging
logging_use_named_masks = true
