# pyproject.toml
[project]
name = "traceflux"
version = "1.2.0"
description = "Lightweight text search engine with noise filtering and associative search"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
  { name = "Tracer" }
  # Email omitted for privacy - use GitHub noreply for commits
]
keywords = [
  "search",
  "text-processing",
  "information-retrieval",
  "unix-philosophy"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Text Processing :: Indexing",
]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pre-commit>=4.5.1",
]

[project.scripts]
traceflux = "traceflux.cli:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
# PDM configuration
# Virtual environment in .venv (project-local)
venv.in_project = true

# Dev dependencies handled via [project.optional-dependencies]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 100

[tool.flake8]
max-line-length = 100
# Ignore:
# - E501: line too long (handled by black)
# - W503: line break before binary operator (controversial)
# - F401: unused imports (harmless, often intentional for future use)
# - F841: unused variables (harmless, often for debugging)
ignore = ["E501", "W503", "F401", "F841"]
# Still check:
# - F821: undefined names (actual bugs)
# - E203: whitespace before ':' (style)

[tool.coverage.run]
source = ["traceflux"]
omit = ["*/tests/*", "*/__init__.py"]

# =============================================================================
# Release Automation (python-semantic-release)
# =============================================================================

[tool.semantic_release]
# Version source
version_toml = ["pyproject.toml:project.version"]

# Commit parser (Conventional Commits)
commit_parser = "conventional"

# Changelog
changelog_file = "CHANGELOG.md"
changelog_sections = ["feature", "fix", "breaking", "deprecation", "documentation", "performance", "refactor"]

# Publish settings
upload_to_release = true  # Auto-publish to GitHub Release
upload_to_pypi = false    # Not using PyPI

# Tag format
tag_format = "v{version}"

# Logging
logging_use_named_masks = true

# Automated hooks (run before version bump)
# These ensure quality gates before release
build_command = """
    pdm install --dev && \
    pdm run pytest -v && \
    pdm run black --check src/ tests/ && \
    pdm run isort --check-only src/ tests/ && \
    pdm run flake8 src/ tests/
"""

[tool.semantic_release.branches.main]
match = "(main|master)"
prerelease = false

[tool.semantic_release.commit_author]
env = "GIT_COMMIT_AUTHOR"
default = "github-actions[bot] <actions@github.com>"

[tool.semantic_release.commit_parser_options]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
other_allowed_tags = ["build", "chore", "ci", "docs", "style", "refactor", "test"]
allowed_tags = ["feat", "fix", "perf", "build", "chore", "ci", "docs", "style", "refactor", "test"]
default_bump_level = 0
parse_squash_commits = true
ignore_merge_commits = true
