# pyproject.toml
[project]
name = "traceflux"
version = "1.2.0"
description = "Lightweight text search engine with noise filtering and associative search"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
  { name = "Tracer" }
  # Email omitted for privacy - use GitHub noreply for commits
]
keywords = [
  "search",
  "text-processing",
  "information-retrieval",
  "unix-philosophy"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Text Processing :: Indexing",
]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pre-commit>=4.5.1",
]

[project.scripts]
traceflux = "traceflux.cli:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
# PDM configuration
# Virtual environment in .venv (project-local)
venv.in_project = true

# Dev dependencies handled via [project.optional-dependencies]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 100

[tool.flake8]
max-line-length = 100
# Ignore:
# - E501: line too long (handled by black)
# - W503: line break before binary operator (controversial)
# - F401: unused imports (harmless, often intentional for future use)
# - F841: unused variables (harmless, often for debugging)
ignore = ["E501", "W503", "F401", "F841"]
# Still check:
# - F821: undefined names (actual bugs)
# - E203: whitespace before ':' (style)

[tool.coverage.run]
source = ["traceflux"]
omit = ["*/tests/*", "*/__init__.py"]

# =============================================================================
# Release Automation (python-semantic-release)
# =============================================================================

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
commit_parser = "conventional"
logging_use_named_masks = false
major_on_zero = true
allow_zero_version = true
repo_dir = "."
no_git_verify = false
tag_format = "v{version}"
add_partial_tags = false

[tool.semantic_release.branches.main]
match = "(main|master)"
prerelease_token = "rc"
prerelease = false

[tool.semantic_release.changelog]
exclude_commit_patterns = []
mode = "update"
insertion_flag = "<!-- version list -->"
template_dir = "templates"

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"
output_format = "md"
mask_initial_release = true

[tool.semantic_release.commit_author]
env = "GIT_COMMIT_AUTHOR"
default = "github-actions[bot] <actions@github.com>"

[tool.semantic_release.commit_parser_options]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
other_allowed_tags = ["build", "chore", "ci", "docs", "style", "refactor", "test"]
allowed_tags = ["feat", "fix", "perf", "build", "chore", "ci", "docs", "style", "refactor", "test"]
default_bump_level = 0
parse_squash_commits = true
ignore_merge_commits = true

[tool.semantic_release.remote]
name = "origin"
type = "github"
ignore_token_for_push = false
insecure = false

[tool.semantic_release.publish]
dist_glob_patterns = ["dist/*"]
upload_to_vcs_release = true
upload_to_pypi = false
